apps/gatus/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: gatus
          image: twinproduction/gatus:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: gatus-config
        - name: data
          persistentVolumeClaim:
            claimName: gatus-data
