apps/gatus/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Gatus
    gethomepage.dev/description: Service Health Status
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: gatus
    gethomepage.dev/href: https://gatus.cyphers.app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gatus.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: gatus
          namespace: gatus
          port: 8080
  tls:
    secretName: production-cyphers-app-tls
